--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,54 +17,45 @@
       <input type="text" id="rollno" name="Rollno" required/><br /><br />
       <label for="dept">Department:</label>
       <select id="dept" name="Elective" required>
-        <option value="NCD Clinic">NCD Clinic</option>
-        <option value="ICMU - Management Of Medical Emergencies">
-            ICMU - Management Of Medical Emergencies
+        <option value="MEDICINE">MEDICINE</option>
+        <option value="PAEDIATRICS">
+          PAEDIATRICS
         </option>
-        <option value="Essential New Born Care">
-         Essential New Born Care
+        <option value="DERMATOLOGY">
+          DERMATOLOGY
         </option>
-        <option value="Common fungal skin infections">
-          Common fungal skin infections
+        <option value="PSYCHIATRY">
+          PSYCHIATRY
         </option>
-        <option value="Anthropometry, growth chart plotting">Anthropometry, growth chart plotting</option>
-        <option value="Common Bacterial and Viral skin infections">
-          Common Bacterial and Viral skin infections
+        <option value="SURGERY">SURGERY</option>
+        <option value="ORTHOPEDICS">
+          ORTHOPEDICS
         </option>
-        <option value="Deaddiction">
-          Deaddiction
+        <option value="RADIO DIAGNOSIS">
+          RADIO DIAGNOSIS
         </option>
-        <option value="General Psychiatry">General Psychiatry</option>
-        <option value="Wound Management - Contaminated and non Contaminated Wounds">
-         Wound Management - Contaminated and non Contaminated Wounds
+        <option value="ANAESTHESIA">ANAESTHESIA</option>
+        <option value="NEPHROLOGY">
+          NEPHROLOGY
         </option>
-        <option value="Long Bone fracture Management -immobilization and splinting">
-          Long Bone fracture Management -immobilization and splinting
+        <option value="CARDIOLOGY">
+          CARDIOLOGY
         </option>
-        <option value="Spine fracture Managemnt">
-          Spine fracture Managemnt
+        <option value="RESPIRATORY MEDICINE">
+          RESPIRATORY MEDICINE
         </option>
-        <option value="Interpretion of Chest X rays">Interpretion of Chest X rays</option>
-        <option value="Anaesthetic Management of High risk cases">
-          Anaesthetic Management of High risk cases
+        <option value="ENT">ENT</option>
+        <option value="OG">
+          OG
         </option>
-        <option value="Cathlab">
-          Cathlab
+        <option value="EMERGENCY MEDICINE">
+          EMERGENCY MEDICINE
         </option>
-        <option value="Obstructive airway disease">
-          Obstructive airway disease
+        <option value="NEUROSURGERY">
+          NEUROSURGERY
         </option>
-        <option value="Face and Neck Trauma">Face and Neck Trauma</option>
-        <option value="Maternal and Child Health">Maternal and Child Health</option>
-<option value="High risk Obstetrics">High risk Obstetrics</option>
-<option value="Gynec oncology">Gynec oncology</option>
-<option value="Code-blue Emergency Triage Management">Code-blue Emergency Triage Management</option>
-<option value="Adult and Pediatric CPR">Adult and Pediatric CPR</option>
-<option value="Toxicology Managment of poisoning and bites">Toxicology Managment of poisoning and bites</option>
-<option value="Operation theatre protocol - anesthetic fitness, patient preparation, Informed Consent, preoperative instructions etc.">Operation theatre protocol - anesthetic fitness, patient preparation, Informed Consent, preoperative instructions etc.</option>
-<option value="Multimodality Imaging Techniques (Xray, Contrast, ultrasonogram, CT Scan, MRI Scan)">Multimodality Imaging Techniques (Xray, Contrast, ultrasonogram, CT Scan, MRI Scan)</option>
-<option value="CKD - Options of renal replacement theory">CKD - Options of renal replacement theory</option>
-<option value="ICU-CPR , Intubation, central venus cannulation, ventilation">ICU-CPR , Intubation, central venus cannulation, ventilation</option>
+        <option value="OPHTHALMOLOGY">OPHTHALMOLOGY</option>
+       
         </select
       ><br /><br />
       <div class="col d-flex justify-content-end mt-4">
